fix(main menu): contrast, icons, responsiveness of main menu

--- a/components/02-molecules/menus/main-menu/_00-main-menu.scss
+++ b/components/02-molecules/menus/main-menu/_00-main-menu.scss
@@ -15,9 +15,18 @@ $main-menu-medium: $medium;
     left: 0;
     overflow-y: scroll;
     position: absolute;
-    top: 134px;
+    top: 110px;
     right: 0;
     width: 100%;
+
+    @include medium {
+      left: auto;
+      overflow-y: visible;
+      position: relative;
+      top: auto;
+      right: auto;
+      width: auto;
+    }
   }
 }
 
@@ -47,7 +56,7 @@ $main-menu-medium: $medium;
   width: 100%;
 
   @include medium {
-    background-color: clr(highlight-high);
+    background-color: clr(accent-high);
     display: none;
     height: auto;
     left: 0;
@@ -58,16 +67,11 @@ $main-menu-medium: $medium;
     width: 315px;
     z-index: 1;
     font-size: 0.9rem;
-    opacity: 0.6;
   }
 
   &:hover {
-    @include medium {
-      opacity: 1;
-      background-color: clr(accent-high);
-      transition: all 0.2s;
-
-      .main-menu__link--sub {
+    .main-menu__link--sub {
+      @include medium {
         color: clr(highlight);
 
         &.active,
