--- a/components/02-molecules/menus/main-menu/_01-main-menu-item.scss
+++ b/components/02-molecules/menus/main-menu/_01-main-menu-item.scss
@@ -10,19 +10,23 @@
     display: inline-block;
 
     /* Only top level */
+    &:not(.main-menu__item--sub):focus,
     &:not(.main-menu__item--sub):hover {
       background-color: clr(accent-high);
-      transition: all 0.2s;
+      color: clr(highlight-high);
+
+      > .main-menu__link {
+        color: clr(highlight);
+
+        &:hover,
+        &:focus {
+          color: clr(highlight-high);
+        }
+      }
 
       & > .main-menu--sub {
         display: block;
       }
-    }
-  }
-
-  &:hover {
-    .main-menu__link::after {
-      color: clr(text);
     }
   }
 }
