--- a/components/02-molecules/menus/main-menu/_02-main-menu-link.scss
+++ b/components/02-molecules/menus/main-menu/_02-main-menu-link.scss
@@ -12,6 +12,16 @@
     width: 80%;
   }
 
+  &:focus,
+  &:hover {
+    color: clr(text);
+
+    @include medium {
+      background-color: clr(accent-high);
+      color: clr(highlight-high);
+    }
+  }
+
   @include medium {
     border-bottom: none;
     display: inline-block;
@@ -21,14 +31,7 @@
     position: relative;
     width: auto;
 
-    &.active,
-    &:active,
-    &:hover {
-      color: clr(highlight-high);
-    }
-
     &::after {
-      color: clr(text-inverse);
       display: inline-block;
       content: '>';
       margin-left: 0.5rem;
@@ -36,14 +39,6 @@
 
     &--sub::after {
       display: none;
-    }
-
-    &:hover {
-      color: clr(background);
-
-      &::after {
-        color: clr(highlight);
-      }
     }
   }
 }
