--- a/components/02-molecules/menus/main-menu/_03-main-menu-toggle.scss
+++ b/components/02-molecules/menus/main-menu/_03-main-menu-toggle.scss
@@ -2,18 +2,22 @@
 .toggle-expand {
   @include link;
 
-  @include medium {
-    display: none;
-  }
-
+  position: absolute;
   display: inline-block;
+  margin-left: -1em;
+  margin-top: -1em;
   padding: $space;
+  width: 100vw;
   text-decoration: none;
-  width: 100%;
+  top: 1em;
 
   /* See main-menu.js */
   &--open {
     background-color: clr(accent);
+  }
+
+  @include medium {
+    display: none;
   }
 }
 
@@ -36,26 +40,28 @@
 
 .toggle-expand__open {
   display: inline-block;
+  float: right;
   text-align: center;
 
   .toggle-expand--open & {
     display: none;
   }
+
+  svg {
+    fill: clr(text);
+  }
 }
 
 .toggle-expand__close {
   display: none;
+  float: right;
   text-align: center;
-
-  &::before {
-    color: clr(background);
-    content: 'X';
-    display: block;
-    font-size: 2.5rem;
-    line-height: 2;
-  }
 
   .toggle-expand--open & {
     display: inline-block;
+  }
+
+  svg {
+    fill: clr(text-inverse);
   }
 }
